--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.24",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
