--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "event-source-polyfill": "^1.0.31",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
@@ -54,6 +55,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/event-source-polyfill": "^1.0.5",
     "@types/jest": "^29.5.12",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
